--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,22 @@
 			<version>5.2.3</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>5.5.0</version>
+
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>3.0</version>
+
+		</dependency>
+
 
 	</dependencies>
 	<profiles>
@@ -68,7 +84,7 @@
 							<version>3.5.2</version>
 							<configuration>
 								<suiteXmlFiles>
-									<suiteXmlFile>registration.xml</suiteXmlFile>
+									<suiteXmlFile>testRunnerXml.registration.xml</suiteXmlFile>
 								</suiteXmlFiles>
 							</configuration>
 						</plugin>
@@ -88,7 +104,7 @@
 							<version>3.5.2</version>
 							<configuration>
 								<suiteXmlFiles>
-									<suiteXmlFile>testng.xml</suiteXmlFile>
+									<suiteXmlFile>testRunnerXml.testng.xml</suiteXmlFile>
 								</suiteXmlFiles>
 							</configuration>
 						</plugin>
@@ -109,7 +125,27 @@
 							<version>3.5.2</version>
 							<configuration>
 								<suiteXmlFiles>
-									<suiteXmlFile>error.xml</suiteXmlFile>
+									<suiteXmlFile>testRunnerXml.error.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+		
+		<profile>
+			<id>Regression</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.5.2</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>testRunnerXml.regression.xml</suiteXmlFile>
 								</suiteXmlFiles>
 							</configuration>
 						</plugin>
